# simple-container-manager

./: Cargo.toml  README.md  dockerfile
src/: main.rs  routes.rs  server.rs  utils.rs
static/: index.html  script.js
