[package]
name = "containers-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
axum = "0.6.20"
clap = { version = "4.4.8", features = ["derive"] }
futures-util = "0.3.29"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["stream"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "fs"] }
tower-http = { version = "0.4.4", features = ["cors"] }
